--- a/index.html
+++ b/index.html
@@ -9,3 +9,19 @@ layout: main
     <h5>Hello world</h5>
     <h6>Hello world</h6>
 </div>
+
+<section class="bg-2">
+    <div class="content">
+        Hello :)
+    </div>
+</section>
+<section class="bg-1">
+    <div class="content">
+        <div class="half">
+            hey
+        </div>
+        <div class="half second">
+            hey
+        </div>
+    </div>
+</section>
