--- a/index.html
+++ b/index.html
@@ -1,27 +1,13 @@
 ---
 layout: main
 ---
-<div>
-    <h1>Hello world</h1>
-    <h2>Hello world</h2>
-    <h3>Hello world</h3>
-    <h4>Hello world</h4>
-    <h5>Hello world</h5>
-    <h6>Hello world</h6>
-</div>
-
 <section class="bg-2">
     <div class="content">
-        Hello :)
+        {% include_relative 1-background/index.html %}
     </div>
 </section>
 <section class="bg-1">
     <div class="content">
-        <div class="half">
-            hey
-        </div>
-        <div class="half second">
-            hey
-        </div>
+        {% include_relative 1-background/index.html %}
     </div>
 </section>
