Introduction + background section w/o graphs

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 ---
 layout: main
 ---
+<section class="bg-hero">
+    <div class="content">
+        {% include_relative 1-introduction/index.html %}
+    </div>
+</section>
 <section class="bg-2">
     <div class="content">
-        {% include_relative 1-background/index.html %}
+        {% include_relative 2-background/index.html %}
     </div>
 </section>
 <section class="bg-1">
     <div class="content">
-        {% include_relative 1-background/index.html %}
+        {% include_relative 2-background/index.html %}
     </div>
 </section>
