--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@ layout: main
 ---
 <section class="bg-hero">
     <div class="content">
-        {% include_relative 1-introduction/index.html %}
+        {% include_relative introduction/index.html %}
     </div>
 </section>
 <section class="bg-2">
     <div class="content">
-        {% include_relative 2-background/index.html %}
+        {% include_relative background/index.html %}
     </div>
 </section>
 <section class="bg-1">
     <div class="content">
-        {% include_relative 2-background/index.html %}
+        {% include_relative background/index.html %}
     </div>
 </section>
