Added first draft copy for all sections, missing graphs and some sections

--- a/index.html
+++ b/index.html
@@ -13,6 +13,26 @@ layout: main
 </section>
 <section class="bg-1">
     <div class="content">
-        {% include_relative background/index.html %}
+        {% include_relative coop/index.html %}
+    </div>
+</section>
+<section class="bg-3">
+    <div class="content">
+        {% include_relative academics/index.html %}
+    </div>
+</section>
+<section class="bg-5">
+    <div class="content">
+        {% include_relative outcomes/index.html %}
+    </div>
+</section>
+<section class="bg-3">
+    <div class="content">
+        {% include_relative lifestyle/index.html %}
+    </div>
+</section>
+<section class="bg-5">
+    <div class="content">
+        {% include_relative future/index.html %}
     </div>
 </section>
