Add all sections

--- a/future/index.html
+++ b/future/index.html
@@ -16,7 +16,21 @@
   West US.
 </p>
 <div class="half second third">
-  Second half. TODO: Gender ratio per year.
+  Second half.
 </div>
 
 <div class="vbx2"></div>
+
+
+<h2> Debt </h2>
+<p class="half two-third">
+TODO
+</p>
+<div class="half second third">
+  Second half
+</div>
+
+<h2> Advice </h2>
+<p class="full">
+TODO
+</p>
