--- a/introduction/index.html
+++ b/introduction/index.html
@@ -1,4 +1,31 @@
-<div class="title">
-  Software Engineering 2018 <br/>
-  Class Profile
-</div>
+<h1> Foreword </h1>
+<p class="full">
+  The University of Waterloo’s Software Engineering (SE) is an interdisciplinary
+  program supported by both the Faculty of Mathematics and the Faculty of
+  Engineering. For 5 years, the 141 students of the class of 2018 spent 8
+  semesters in school with similar schedules as well as 6 internships.
+  <br /><br />
+  SE is commonly compared to Computer Science, and is often seen as its
+  competitive and rigorous counterpart. Prospective students may wonder whether SE
+  is the right fit for them, and whether they’ll enjoy the environment. This
+  profile attempts to showcase aspects of SE students and their lives.
+</p>
+
+<div class="vbx4"></div>
+
+<h1> Preface </h1>
+
+<p class="full">
+The findings in this report were derived from the results of a class survey.
+In total, 113 out of 141 (80%) students responded. In many ways (especially
+class size), the class of 2018 is an outlier, and generalizations from this
+class to other SE classes are risky.
+  <br /><br />
+
+Study terms are defined as 1A, 1B, 2A, up to 4B (8 terms). Coop terms are evenly
+spread out between study terms, starting after 1B and ending before 4B.
+  <br /><br />
+
+This class profile was largely inspired from the SYDE 2017 class profile created
+by Joey Loi and Atef Chaudhury.
+</p>
