--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -1,1 +1,46 @@
-<h1> Outcomes </h1>
+<h1> Program Outcome </h1>
+
+<h2> Original class </h2>
+<p class="half two-third">
+  Use Patrick Lam's data, + 81%
+</p>
+<div class="half second third">
+  Second half. TODO: Gender ratio per year.
+</div></h2>
+
+<div class="vbx2"></div>
+
+<h2> Did students enjoy SE? </h2>
+<p class="half two-third">
+  Use Patrick Lam's data, + 81%
+</p>
+<div class="half second third">
+  Second half. TODO: Gender ratio per year.
+</div></h2>
+
+<div class="vb"></div>
+
+<h4> How was the experience per gender? </h4>
+<p class="half two-third">
+  TODO
+</p>
+<div class="half second third">
+  Second half. TODO: Gender ratio per year.
+</div></h2>
+
+<div class="vbx2"></div>
+
+<h2> Financial breakdown </h2>
+<p class="half third">
+  TODO
+</p>
+<div class="half second two-third">
+  Second half. TODO: Gender ratio per year.
+</div></h2>
+
+<div class="vbx2"></div>
+
+<h2> Paths </h2>
+<p class="full">
+  TODO
+</p>
