--- a/academics/index.html
+++ b/academics/index.html
@@ -13,11 +13,6 @@
 <div class="vbx2"></div>
 <h3> Attendance </h3>
 <p class="half two-third">
-We found no correlation between self-reported attendance and grades. To be
-clear, this does not conclude nor suggest that going to class is useless.
-It does suggest that it is possible to achieve good grades without attending
-all classes.
-<br/> </br>
 Attendance consistently drops term by term, except after the hardest term.
 Either students enjoyed their 4A classes more, or they were possibly looking to
 compensate for their lower grades in 3B.
@@ -29,10 +24,32 @@ compensate for their lower grades in 3B.
 <div class="vbx4"></div>
 
 
-<h2> What affects grades? </h2>
+<h2> Does X affect grades?</h2>
+
+<h3> Attendance </h3>
+<p class="half">
+We found no correlation between self-reported attendance and grades. To be clear, this does not conclude nor suggest that going to class is useless. It does suggest that it is possible to achieve good grades without attending all classes.
+TODO:
+</p>
+<div class="half second">
+  Second half.
+</div>
+<div class="vbx2"></div>
+
+<h3> Admission average </h3>
 <p class="half third">
 TODO:
 </p>
 <div class="half second two-third">
   Second half.
 </div>
+<div class="vbx2"></div>
+
+<h3> Parents education </h3>
+<p class="half third">
+TODO:
+</p>
+<div class="half second two-third">
+  Second half.
+</div>
+<div class="vbx2"></div>
