Annotate all of the graphs needed

--- a/academics/index.html
+++ b/academics/index.html
@@ -7,7 +7,7 @@
   followed by 2B and 3A. Students found 1A to be the easiest, followed by 4A.
 </p>
 <div class="half second two-third">
-  Second half. TODO: Gender ratio per year.
+  Second half. TODO: Line chart. Bar chart for difficulty
 </div>
 
 <div class="vbx2"></div>
@@ -32,7 +32,7 @@ We found no correlation between self-reported attendance and grades. To be clear
 TODO:
 </p>
 <div class="half second">
-  Second half.
+  Second half. Multi Line chart.
 </div>
 <div class="vbx2"></div>
 
@@ -41,7 +41,7 @@ TODO:
 TODO:
 </p>
 <div class="half second two-third">
-  Second half.
+  Second half. Box plot
 </div>
 <div class="vbx2"></div>
 
@@ -50,6 +50,6 @@ TODO:
 TODO:
 </p>
 <div class="half second two-third">
-  Second half.
+  Second half. Box plot
 </div>
 <div class="vbx2"></div>
