--- a/background/index.html
+++ b/background/index.html
@@ -8,7 +8,7 @@
   more-recent SE classes has been increasing.
 </p>
 <div class="half second third">
-  Second half. TODO: Gender ratio per year.
+  Second half. TODO: Gender ratio per year. Percentage component bar chart
 </div>
 
 <div class="vbx2"></div>
@@ -20,7 +20,7 @@
   Asia, while the remaining half consist mostly of Caucasians and South Asians.
 </p>
 <div class="half second">
-  Second half. Insert ethnicity breakdown
+  Second half. Insert ethnicity breakdown. Horizontal bar chart
 </div>
 
 <div class="vbx2"></div>
@@ -34,7 +34,7 @@
   common pattern amongst students during high school.
 </p>
 <div class="half second third">
-  High school extracurricular bar chart
+  High school extracurricular bar chart. Horizontal bar chart
 </div>
 
 <div class="vbx2"></div>
@@ -45,7 +45,7 @@
   Waterloo's 18%.
 </p>
 <div class="half second">
-  International students vs non international students
+  International students vs non international students. Pie chart
 </div>
 
 <div class="vbx2"></div>
@@ -57,7 +57,7 @@
     software engineering, most parents do have a university-level education.
 </p>
 <div class="half second">
-  Pie chart of level of education?
+  Pie chart of level of education? Pie chart
 </div>
 
 <div class="vbx2"></div>
@@ -70,6 +70,6 @@
   school after 5 years with no summer.
 </p>
 <div class="half second third">
-  Pie chart of level of education?
+  Pie chart of level of education? Pie chart
 </div>
 
