--- a/future/index.html
+++ b/future/index.html
@@ -16,7 +16,7 @@
   West US.
 </p>
 <div class="half second third">
-  Second half.
+  Second half. Bar charts
 </div>
 
 <div class="vbx2"></div>
@@ -27,7 +27,7 @@
 TODO
 </p>
 <div class="half second third">
-  Second half
+  Second half. Bar chart.
 </div>
 
 <h2> Advice </h2>
