--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -8,7 +8,7 @@
   activities.
 </p>
 <div class="half second">
-  Second half
+  Second half. Bar chart.
 </div>
 
 <div class="vbx2"></div>
@@ -20,7 +20,7 @@
   different question that may be better left unanswered.
 </p>
 <div class="half second">
-  Second half
+  Second half. Bar chart.
 </div>
 
 <div class="vbx2"></div>
@@ -33,7 +33,7 @@
   focus better in the silence, or simply because they like gaming very late.
 </p>
 <div class="half second">
-  Second half
+  Second half. Distribution chart.
 </div>
 
 
@@ -47,7 +47,7 @@
   activity.
 </p>
 <div class="half second">
-  Second half
+  Second half. Bar chart.
 </div>
 
 <div class="vbx4"></div>
@@ -65,7 +65,7 @@
   so popular.
 </p>
 <div class="half second">
-  Second half
+  Second half. Horizontal bar chart
 </div>
 
 
@@ -79,7 +79,7 @@
   survey.
 </p>
 <div class="half second">
-  Second half
+  Second half. Horizontal bar chart
 </div>
 
 <div class="vbx2"></div>
@@ -92,22 +92,21 @@
   programmers
 </p>
 <div class="half second">
-  Second half
+  Second half. Pie chart
 </div>
 
 
 <div class="vbx2"></div>
 
-<h3> Desktop OS </h3>
+<h3> Hackathons OS </h3>
 <p class="half">
-
   More than 80% of students have gone to at least one hackathon, an overnight
   programming event where attendees build something from scratch.
   <br/><br/>
   `TODO: mention that it's not a requirement to land a good job`
 </p>
 <div class="half second">
-  Second half
+  Second half. Distribution
 </div>
 
 
@@ -120,7 +119,7 @@
   hours a month on their side projects.
 </p>
 <div class="half second">
-  Second half
+  Second half. Distribution
 </div>
 
 
@@ -143,7 +142,7 @@
 
 </p>
 <div class="half second">
-  Second half
+  Second half. Horizontal bar chart.
 </div>
 
 
