--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -5,7 +5,7 @@
   Use Patrick Lam's data, + 81%
 </p>
 <div class="half second third">
-  Second half. TODO: Gender ratio per year.
+  Second half. Pie chart
 </div></h2>
 
 <div class="vbx2"></div>
@@ -15,7 +15,7 @@
   Use Patrick Lam's data, + 81%
 </p>
 <div class="half second third">
-  Second half. TODO: Gender ratio per year.
+  Second half. TODO: Bar chart
 </div></h2>
 
 <div class="vb"></div>
@@ -25,7 +25,7 @@
   TODO
 </p>
 <div class="half second third">
-  Second half. TODO: Gender ratio per year.
+  Second half. Box plot
 </div></h2>
 
 <div class="vbx2"></div>
@@ -35,7 +35,7 @@
   TODO
 </p>
 <div class="half second two-third">
-  Second half. TODO: Gender ratio per year.
+  Second half. Complex line chart
 </div></h2>
 
 <div class="vbx2"></div>
