Extraccuriculars should be word clouds

--- a/background/index.html
+++ b/background/index.html
@@ -34,7 +34,7 @@
   common pattern amongst students during high school.
 </p>
 <div class="half second third">
-  High school extracurricular bar chart. Horizontal bar chart
+  High school extracurricular bar chart. Word cloud
 </div>
 
 <div class="vbx2"></div>
