--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -47,7 +47,7 @@
   activity.
 </p>
 <div class="half second">
-  Second half. Bar chart.
+  Second half. Word cloud.
 </div>
 
 <div class="vbx4"></div>
