Add horizontal bar charts

--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -2,13 +2,13 @@
 <h2> General </h2>
 
 <h3> Exercise </h3>
-<p class="half">
+<p class="half third">
   Almost 80% of students regularly exercise every month. Although school can be
   very time consuming, most students actively set aside time for physical
   activities.
 </p>
-<div class="half second">
-  Second half. Bar chart.
+<div id="exercise" class="half second two-third">
+
 </div>
 
 <div class="vbx2"></div>
@@ -19,21 +19,21 @@
   lot of experience cooking. How good our cooking is? That’s a completely
   different question that may be better left unanswered.
 </p>
-<div class="half second">
-  Second half. Bar chart.
+<div id="cooking" class="half second">
 </div>
 
 <div class="vbx2"></div>
 
 <h3> Sleeping </h3>
-<p class="half">
+<p class="half third">
   Although software engineers may have a reputation for being nocturnal, most of
-  us aren’t night owls. In fact, 72% of students usually sleep before 1AM.
+  us aren’t night owls.
+  <br/><br/>
+  In fact, 72% of students usually sleep before 1AM.
   However, many students do still prefer sleeping late, possibly because they can
   focus better in the silence, or simply because they like gaming very late.
 </p>
-<div class="half second">
-  Second half. Distribution chart.
+<div id="sleeping" class="half second two-third">
 </div>
 
 
