Add graphs, refactor, finalize lifestyle and end sections

--- a/end/index.html
+++ b/end/index.html
@@ -1,13 +1,113 @@
-<h1> Final words</h1>
+<h1> Thank you for reading!</h1>
 <p class="full">
-Thanks for reading TODO
+<span class="big">
+  I hope you enjoyed the Software Engineering 2018 Class Profile as much as I
+  had making it!
+</span>
 </p>
 
-<h2> Contact </h2>
-<p class="full">
-  Thanks for reading TODO
-</p>
-
-<h2> Resources</h2>
+<div class="vbx3"></div>
 <h2> Acknowledgements</h2>
-<h2> Thank you </h2>
+<p class="full">
+This project wouldn't have been possible without the help of some great people:
+</p>
+
+<div class="vb"></div>
+
+<p class="full">
+<b>Patrick Lam</b>, director of Software Engineering, for confidentially
+managing the data and unbiasedly advising the project from start to finish.
+</p>
+
+<div class="hvb"></div>
+<p class="full">
+<b>Christopher Luc</b> for setting up the processing architecture and advising the
+statistical methodologies applied, and <b>Richard Wong</b> for helping write
+some processing scripts.
+</p>
+<div class="hvb"></div>
+
+<p class="full">
+<b>Joey Loi</b> and <b>Atef Chaudhury</b> for inspiring me to create this class
+profile. Much of the process and structure of this was borrowed from their SYDE
+2017 class profile.
+</p>
+
+<div class="hvb"></div>
+<p class="full">
+<b>Balaji S., Emily W., Seun M., Soheil
+  K.</b>, and <b>Bilal A.</b> for providing feedback on the survey sent out.
+</p>
+
+<div class="vbx2"></div>
+<h2> Resources</h2>
+<h3> UWaterloo Software Engineering </h3>
+<p class="full">
+  Software Engineering Program Homepage
+  <a target="_blank" href="https://uwaterloo.ca/software-engineering/">https://uwaterloo.ca/software-engineering/
+</a>
+</p>
+<p class="full">
+Coop at UWaterloo
+<a target="_blank" href="https://uwaterloo.ca/co-operative-education/">
+  https://uwaterloo.ca/co-operative-education/</a>
+</p>
+<p class="full">
+Academic Calendar
+<a target="_blank" href="https://ugradcalendar.uwaterloo.ca/page/ENG-Software-Engineering">
+  https://ugradcalendar.uwaterloo.ca/page/ENG-Software-Engineering</a>
+</p>
+
+<div class="vb"></div>
+<h3> Data </h3>
+<p class="full">
+Processing scripts
+<a target="_blank" href="https://github.com/se2018/class-profile">
+  https://github.com/se2018/class-profile</a>
+</p>
+
+<p class="full">
+Class Profile code
+<a target="_blank" href="https://github.com/andyzg/class-profile">
+  https://github.com/andyzg/class-profile</a>
+</p>
+
+<p class="full">
+SE Exit Survey results  (not related to Class Profile)
+<a target="_blank" href="https://ql.tc/Hia9QK">
+  https://ql.tc/Hia9QK
+</a>
+</p>
+<div class="vb"></div>
+
+<h3> Inspirations </h3>
+<p class="full">
+SYDE 2017 Class Profile
+<a target="_blank" href="http://joeyloi.com/SYDE2017classprofile.pdf">
+http://joeyloi.com/SYDE2017classprofile.pdf
+</a>
+</p>
+
+<p class="full">
+HackerRank 2018 Developer Skills Report
+<a target="_blank" href="http://research.hackerrank.com/developer-skills/2018/">
+http://research.hackerrank.com/developer-skills/2018/
+</a>
+</p>
+
+<p class="full">
+StackOverflow 2018 Developer Survey Results
+<a target="_blank" href="https://insights.stackoverflow.com/survey/2018/">
+https://insights.stackoverflow.com/survey/2018/
+</a>
+</p>
+
+<div class="vb"></div>
+
+<h2> Get in touch! </h2>
+<p class="full">
+Let me know what you think! You can reach me at
+<a href="mailto:andy.zhang@edu.uwaterloo.ca?subject=Hello!">
+  andy.zhang@edu.uwaterloo.ca
+</a>
+</p>
