--- a/future/index.html
+++ b/future/index.html
@@ -2,8 +2,11 @@
 <h2> What's next? </h2>
 <h3> Post-grad plans </h3>
 <p class="half two-third">
-  As of January 2018, 77% of students already have an offer, and 15% of students are
-  still looking for a job.  7 students are planning to do graduate studies after
+  <span class="big">
+    As of January 2018, 77% of students already have an offer, and 15% of students are
+    still looking for a job.
+  </span>
+  7 students are planning to do graduate studies after
   graduating. Although most of the class plans to join the workforce immediately,
   34% of students are  considering to do grad school at some point in the future.
   <br/><br/>
@@ -21,6 +24,8 @@
 
 <div class="vbx2"></div>
 
+<h3> Motivations </h3>
+TODO
 
 <h2> Debt </h2>
 <p class="half two-third">
