--- a/academics/index.html
+++ b/academics/index.html
@@ -2,7 +2,10 @@
 <h2> Study terms </h2>
 <h3> Grades </h3>
 <p class="half third">
-  Study terms do not get progressively harder or easier. There is a consensus on
+  <span class="big">
+  Study terms do not get progressively harder or easier. TODO: edit
+  </span>
+  There is a consensus on
   which terms are the hardest and easiest though. 3B was by far the hardest term,
   followed by 2B and 3A. Students found 1A to be the easiest, followed by 4A.
 </p>
@@ -13,7 +16,10 @@
 <div class="vbx2"></div>
 <h3> Attendance </h3>
 <p class="half two-third">
-Attendance consistently drops term by term, except after the hardest term.
+<span class="big">
+  Attendance consistently drops term by term, except after the
+  hardest term.
+</span>
 Either students enjoyed their 4A classes more, or they were possibly looking to
 compensate for their lower grades in 3B.
 </p>
@@ -28,7 +34,12 @@ compensate for their lower grades in 3B.
 
 <h3> Attendance </h3>
 <p class="half">
-We found no correlation between self-reported attendance and grades. To be clear, this does not conclude nor suggest that going to class is useless. It does suggest that it is possible to achieve good grades without attending all classes.
+<span class="big">
+  There was no correlation between self-reported attendance and grades.
+</span>
+To be clear, this does not conclude nor suggest that going to class isn't
+useful. Instead, it suggests that it is possible to achieve good grades without
+attending all classes.
 TODO:
 </p>
 <div class="half second">
