--- a/background/index.html
+++ b/background/index.html
@@ -2,8 +2,11 @@
 <h2> Demographics </h2>
 <h3> Gender </h3>
 <p class="half two-third">
-  Women make up 17% of the students, which is approximately the same proportion as
-  the number of women in tech. Although the gender ratio isn’t something to be
+  <span class="big">
+    Women make up 17% of the students, which is approximately the same proportion as
+    the number of women in tech.
+  </span>
+  Although the gender ratio isn’t something to be
   satisfied with, the trend is positive: the proportion of female students in
   more-recent SE classes has been increasing.
 </p>
@@ -15,8 +18,11 @@
 
 <h3> Ethnicity</h3>
 <p class="half">
+  <span class="big">
   SE students come from many different ethnic backgrounds, from at least 27
-  different countries. About half of the student have ethnic origins in East
+  different countries.
+  </span>
+  About half of the student have ethnic origins in East
   Asia, while the remaining half consist mostly of Caucasians and South Asians.
 </p>
 <div class="half second">
@@ -27,8 +33,11 @@
 
 <h3> High school extracurriculars</h3>
 <p class="half two-third">
+  <span class="big">
   Less than 35% of students were involved in a STEM, CS or Robotics club during
-  high school. Instead, students participated in all sorts of extracurricular
+  high school.
+  </span>
+  Instead, students participated in all sorts of extracurricular
   activities such as volunteer work for non-profits, being a cadet, starting a
   school newspaper, and more. Pursuing their own unique personal interests was a
   common pattern amongst students during high school.
@@ -41,8 +50,11 @@
 
 <h3> International students </h3>
 <p class="half">
+  <span class="big">
   14% of SE students are international, which is 4% less than University of
   Waterloo's 18%.
+  </span>
+  TODO
 </p>
 <div class="half second">
   International students vs non international students. Pie chart
@@ -53,8 +65,11 @@
 <h2> Family background </h2>
 <h3> Field of study </h3>
 <p class="half">
-    Although most students’ parents don’t have a technical degree related to
-    software engineering, most parents do have a university-level education.
+  <span class="big">
+    Most students' parents don't have a technical degree related to engineering
+    or computer science.
+  </span>
+  TODO
 </p>
 <div class="half second">
   Pie chart of level of education? Pie chart
@@ -64,8 +79,10 @@
 
 <h3> Level of education </h3>
 <p class="half two-third">
-  There are more parents with Masters and PhD’s combined than Bachelors. Compared
-  to their parents, only 3 students out of 113 chose to do grad school. This could
+  <span class="big">
+  There are more parents with Masters and PhD’s combined than Bachelors.
+  </span>
+  Compared to our parents, only 3 students out of 113 chose to do grad school. This could
   either be a generational shift, or it could just be that students are tired of
   school after 5 years with no summer.
 </p>
