--- a/introduction/index.html
+++ b/introduction/index.html
@@ -1,4 +1,4 @@
-<h1> Foreword </h1>
+<h1> About the program </h1>
 <p class="full">
   The University of Waterloo’s Software Engineering (SE) is an interdisciplinary
   program supported by both the Faculty of Mathematics and the Faculty of
