--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -2,12 +2,16 @@
 <h2> General </h2>
 
 <h3> Exercise </h3>
-<p class="half third">
-  Almost 80% of students regularly exercise every month. Although school can be
-  very time consuming, most students actively set aside time for physical
-  activities.
+<p class="half">
+  <span class="big">
+    Almost 80% of students exercise a few times a month.
+  </span>
+  This could be in the form of intramurals, gym, sports team, etc.
+  Students typically start SE intramural teams with one another.
+  Although school is time consuming, most students actively set
+  aside time for physical activities.
 </p>
-<div id="exercise" class="half second two-third">
+<div id="exercise" class="half second">
 
 </div>
 
@@ -15,9 +19,16 @@
 
 <h3> Cooking </h3>
 <p class="half">
-  Over half of students cook every week. In other words, many of us have a
-  lot of experience cooking. How good our cooking is? That’s a completely
-  different question that may be better left unanswered.
+  <span class="big">
+    Over half of students cook every week.
+  </span>
+  In other words, many of us have a
+  lot of experience cooking. How good is our cooking? That’s a completely
+  separate question that may be better left unanswered.
+
+  <br/> <br />
+  These results vary depending on whether students are on a study or coop
+  term, since many companies cater meals during weekdays.
 </p>
 <div id="cooking" class="half second">
 </div>
@@ -25,15 +36,19 @@
 <div class="vbx2"></div>
 
 <h3> Sleeping </h3>
-<p class="half third">
-  Although software engineers may have a reputation for being nocturnal, most of
+<p class="half">
+  <span class="big">
+  Software engineers may have a reputation for being nocturnal, most of
   us aren’t night owls.
-  <br/><br/>
+  </span>
   In fact, 72% of students usually sleep before 1AM.
-  However, many students do still prefer sleeping late, possibly because they can
-  focus better in the silence, or simply because they like gaming very late.
+  However, some students do still prefer sleeping late, possibly because they
+  focus better at night, or maybe they like gaming very late.
+  <br /> <br />
+  5:00AM-6:00AM might sound crazy, but then again, SE students willingly go to 24 hour
+  coding events called hackathons.
 </p>
-<div id="sleeping" class="half second two-third">
+<div id="sleeping" class="half second">
 </div>
 
 
@@ -41,8 +56,10 @@
 
 <h3> Extracurriculars </h3>
 <p class="half">
-  Unlike high school, almost half of students were not involved in any
-  extracurriculars during undergrad. Amongst those that were involved, almost
+  <span class="big">Unlike high school, almost half of students were not involved in any
+    extracurriculars during undergrad.
+  </span>
+  Amongst those that were involved, almost
   every student were the only SE 2018 student in their respective extracurricular
   activity.
 </p>
@@ -56,16 +73,27 @@
 
 <h3> Programming language</h3>
 <p class="half">
+  <span class="big">
   Python is the most popular programming language, followed by Java, and then JavaScript.
-  <br/> <br/>
-  Python’s versatility for web, scripting, and even machine learning could explain
-  why it’s so popular in our class. Java continues to be very popular since it’s
-  commonly taught in high school. And many companies hire web developers for
+  </span>
+  Python’s versatility for back-end web, scripting, and especially machine learning could explain
+  why it’s so popular in our class. Many of these disciplines are high in demand
+  in the software engineering, making Python an ideal general purpose language.
+
+  <br /> <br />
+  Java continues to be very popular since it’s
+  commonly taught as students' first programming language in high school.
+
+  <br /> <br />
+  Many companies hire web developers for
   co-op, which could explain why JavaScript, a scripting language for the web, is
-  so popular.
+  so popular. It also happens to be the most popular language amongst all
+  developers <a rel="noopener" href="https://insights.stackoverflow.com/survey/2018/#technology-programming-scripting-and-markup-languages"
+    target="_blank">
+    according to a StackOverflow survey</a>.
 </p>
-<div class="half second">
-  Second half. Horizontal bar chart
+<div id="languages" class="half second">
+
 </div>
 
 
@@ -73,20 +101,27 @@
 
 <h3> Editor </h3>
 <p class="half">
+  <span class="big">
   Sublime Text is the most popular text editor used in our class, followed by Vim
-  and Atom. Interestingly, Visual Studio Code is one of the least popular editors
-  in our class but it is the most popular editor according to a StackOverflow
-  survey.
+  and Atom.
+  </span>
+  Interestingly, Visual Studio Code is one of the less popular editors
+  in our class but it is the most popular editor according to the same StackOverflow
+  survey. This could be because it was released very recently after most
+  students were already accustomed to their favourite editor.
+
 </p>
-<div class="half second">
-  Second half. Horizontal bar chart
+<div id="editor" class="half second">
 </div>
 
 <div class="vbx2"></div>
 
 <h3> Desktop OS </h3>
 <p class="half">
-  The majority of students are using a macOS machine. Interestingly, most students
+  <span class="big">
+  The majority of students are using a macOS machine.
+  </span>
+  Interestingly, most students
   didn’t have a macOS machine in first year. This result isn’t surprising since
   macOS is built on top of Unix, enabling a lot of important functionality for
   programmers
@@ -98,11 +133,13 @@
 
 <div class="vbx2"></div>
 
-<h3> Hackathons OS </h3>
+<h3> Hackathons </h3>
 <p class="half">
-  More than 80% of students have gone to at least one hackathon, an overnight
+  <span class="big">
+  More than 80% of students have gone to at least one hackathon.
+  </span>
+  Hackathons are an overnight
   programming event where attendees build something from scratch.
-  <br/><br/>
   `TODO: mention that it's not a requirement to land a good job`
 </p>
 <div class="half second">
@@ -114,26 +151,37 @@
 
 <h3> Side projects </h3>
 <p class="half">
-  Most students have also worked on some sort of side project during university.
+  <span class="big">
+    Most students have also worked on some sort of side project during university.
+  </span>
   Amongst those that have built side projects, only 25% dedicated more than 10
-  hours a month on their side projects.
+  hours a month on their side projects. This should be taken with a grain of
+  salt since commitment may vary depending on the term and year.
+  <br /><br />
+  During the first few years of SE, side projects is often a means to getting
+  a better co-op job because it compensates for the lack of software work experience.
 </p>
-<div class="half second">
-  Second half. Distribution
+<div id="side" class="half second">
 </div>
 
 
 <div class="vbx2"></div>
 
-<h3> Discplines</h3>
+<h3> Software Discplines</h3>
 <p class="half">
-  57% of students enjoy an aspect of web development (front-end, back-end,
-  full-stack). This could be explained by the positions available for our co-op
-  terms, since many of them were related to web development.
+  <span class="big">
+    57% of students enjoy an aspect of web development (front-end, back-end,
+    full-stack).
+  </span>
+    Many co-op positions happen to be related to web development which explains
+    why many students are more familar with it. Alternatively,
+    students could just find web development the most fun. Interestingly, there
+    are no course offerings in SE for web development unlike ML and AI.
   <br/><br/>
 
   After web development, 25% of students enjoy machine learning (ML) or
-  artificial intelligence (AI). This aligns with the rising popularity of both disciplines.
+  artificial intelligence (AI). This aligns with the rising popularity and
+  demand of both disciplines.
   <br/><br/>
 
   Only 3 students have expressed interest in mobile development. This is
@@ -141,8 +189,7 @@
   amongst consumers.
 
 </p>
-<div class="half second">
-  Second half. Horizontal bar chart.
+<div id="discplines" class="half second">
 </div>
 
 
