Add hero background

--- a/hero/index.html
+++ b/hero/index.html
@@ -1,4 +1,8 @@
 <div class="title">
-  Software Engineering 2018 <br/>
+  UWaterloo Software <br />
+  Engineering 2018 <br />
   Class Profile
+</div>
+<div class="subtitle">
+  Andy Zhang, June 2018
 </div>
