Add more sections, fix cover photo

--- a/coop/index.html
+++ b/coop/index.html
@@ -1,14 +1,102 @@
-<h1> Coop TODO </h1>
-<h2> Demographics </h2>
-<h3> Gender </h3>
-<p class="half two-third">
-  Women make up 17% of the students, which is approximately the same proportion as
-  the number of women in tech. Although the gender ratio isn’t something to be
-  satisfied with, the trend is positive: the proportion of female students in
-  more-recent SE classes has been increasing.
+<h1> Co-op </h1>
+<h2> Where did students work? </h2>
+<h3> Companies </h3>
+<p class="full">
+  <span class="big">
+    With 6 available co-ops, students took full advantage and interned in all
+    sorts of environments.
+  </span>
+  For example, working at a 5 person startup, developing in Kenya, doing
+  research with professors, TA'ing a course, etc. Some students also tried
+  new positions outside of software engineering such
+  as product designer, data scientist, associate quantitative trader,
+  consulting, etc.
+  <br /> <br />
+  The benefit of having 6 internships is that students get to explore different
+  company sizes doing different positions in different cities. This is
+  invaluable for students because it helps us figure out what we want to do once
+  we graduate.
 </p>
-<div class="half second third">
-  Second half. TODO: Gender ratio per year.
+<div class="vb"></div>
+<p class="full">
+In the visualization below, <b>larger company names</b> means that <b>more people worked
+  there</b>, and <b>brighter words</b> means that <b>people enjoyed their
+  internship there</b>.
+TODO: Create asset
+</p>
+<div class="full">
+  <div id="coop-cloud">
+  </div>
+  <span class="graph-title"> Companies students have worked at </span>
 </div>
 
 <div class="vbx2"></div>
+<h3> Locations </h3>
+<p class="half">
+  <span class="big">
+    91% of students interned in at least 2 different countries.
+  </span>
+  Out of the 9% of students that only interned in Canada, some are restricted to
+  working in Canada due to their Visa.
+  <br /><br />
+  After the 5th co-op, there is a decrease in the number of students working in
+  the US. Most people that worked in the US worked in California, specifically
+  in Silicon Valley. This makes sense because Silicon Valley is the HQ for many
+  large tech companies that hire software engineers such as Google, Facebook,
+  Apple, etc.
+  <br /><br />
+  During 5 of the 6 co-op terms, there was at least one student working outside
+  of North America. Students worked in cities like Stockholm, Nairobi, Phnom
+  Penh, Shanghai, Tokyo, etc.
+</p>
+<div class="half second">
+  <span class="graph-title"> Areas students have worked in </span>
+</div>
+
+<div class="vbx2"></div>
+
+<h3> Favourite Locations </h3>
+<p class="half">
+  <span class="big"> California was not the favourite co-op location for 43% of
+    students.
+  </span>
+  Although it is still preferred by the majority of students, this suggests that
+  it's not for everyone. This suggests that the infamous 'Cali or Bust'
+  mentality can set up a significant number of current students for
+  disappointment compared to other opportunities.
+</p>
+
+<div class="vbx2"></div>
+
+<h2> Does X affect job opportunities? </h2>
+<h3> Salary as a metric </h3>
+<p class="full">
+In order to rank jobs appropriately, salary is used as a subjective metric to
+measure job quality. Due to the subjectiveness of this metric, the following
+results should be taken with a grain of salt. This is because lower paying jobs
+can be enjoyed more depending on the person.
+</p>
+
+<div class="vbx2"></div>
+<h3> Years of coding experience </h3>
+<p class="half">
+  <span class="big">
+    Students who started coding earlier were paid similarly compared to students who
+    started coding later.
+  </span>
+  It doesn't matter if a student started at the age of 13 or 18. This suggests
+  that students that start coding near the start of university are not at a
+  disadvantage in terms of co-op job hunting.
+</p>
+
+<div class="vbx2"></div>
+<h3> Hackathons </h3>
+<p class="half">
+  <span class="big">
+    Students who started coding earlier were paid similarly compared to students who
+    started coding later.
+  </span>
+  It doesn't matter if a student started at the age of 13 or 18. This suggests
+  that students that start coding near the start of university are not at a
+  disadvantage in terms of co-op job hunting.
+</p>
