--- a/introduction/index.html
+++ b/introduction/index.html
@@ -6,9 +6,10 @@
   semesters in school with similar schedules as well as 6 internships.
   <br /><br />
   SE is commonly compared to Computer Science, and is often seen as its
-  competitive and rigorous counterpart. Prospective students may wonder whether SE
+  rigorous and engineering-oriented counterpart. Prospective students may wonder whether SE
   is the right fit for them, and whether they’ll enjoy the environment. This
-  profile attempts to showcase aspects of SE students and their lives.
+  profile attempts to showcase who SE 2018 students are, what they've done, and
+  how they went through university.
 </p>
 
 <div class="vbx4"></div>
