--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -11,8 +11,10 @@
   Although school is time consuming, most students actively set
   aside time for physical activities.
 </p>
-<div id="exercise" class="half second">
-
+<div class="half second">
+  <div id="exercise">
+  </div>
+  <span class="graph-title"> Exercise frequency </span>
 </div>
 
 <div class="vbx2"></div>
@@ -30,7 +32,9 @@
   These results vary depending on whether students are on a study or coop
   term, since many companies cater meals during weekdays.
 </p>
-<div id="cooking" class="half second">
+<div class="half second">
+  <div id="cooking"></div>
+  <span class="graph-title"> Cooking frequency </span>
 </div>
 
 <div class="vbx2"></div>
@@ -48,7 +52,9 @@
   5:00AM-6:00AM might sound crazy, but then again, SE students willingly go to 24 hour
   coding events called hackathons.
 </p>
-<div id="sleeping" class="half second">
+<div class="half second">
+  <div id="sleeping"></div>
+  <span class="graph-title"> Estimate sleep time </span>
 </div>
 
 
@@ -92,8 +98,9 @@
     target="_blank">
     according to a StackOverflow survey</a>.
 </p>
-<div id="languages" class="half second">
-
+<div class="half second">
+  <div id="languages" ></div>
+  <span class="graph-title"> Programming language preference</span>
 </div>
 
 
@@ -111,7 +118,9 @@
   students were already accustomed to their favourite editor.
 
 </p>
-<div id="editor" class="half second">
+<div class="half second">
+  <div id="editor" ></div>
+  <span class="graph-title"> Editor preference</span>
 </div>
 
 <div class="vbx2"></div>
@@ -143,7 +152,9 @@
   `TODO: mention that it's not a requirement to land a good job`
 </p>
 <div class="half second">
-  Second half. Distribution
+  <div id="hackathons">
+  </div>
+  <span class="graph-title"> Number of hackathons attended </span>
 </div>
 
 
@@ -161,7 +172,9 @@
   During the first few years of SE, side projects is often a means to getting
   a better co-op job because it compensates for the lack of software work experience.
 </p>
-<div id="side" class="half second">
+<div class="half second">
+  <div id="side"></div>
+  <span class="graph-title"> Side project commitment estimate </span>
 </div>
 
 
@@ -189,7 +202,9 @@
   amongst consumers.
 
 </p>
-<div id="discplines" class="half second">
+<div class="half second">
+  <div id="disciplines"></div>
+  <span class="graph-title"> Disciplines of interest </span>
 </div>
 
 
