Add coop section

--- a/coop/index.html
+++ b/coop/index.html
@@ -1,13 +1,12 @@
 <h1> Co-op </h1>
-<h2> Where did students work? </h2>
 <h3> Companies </h3>
 <p class="full">
   <span class="big">
-    With 6 available co-ops, students took full advantage and interned in all
-    sorts of environments.
+    At least 300 companies from 58 different cities have hired an SE student.
   </span>
+  Students had the opportunity to work in many different types of environments.
   For example, working at a 5 person startup, developing in Kenya, doing
-  research with professors, TA'ing a course, etc. Some students also tried
+  research with professors, working at a big tech company, etc. Some students also tried
   new positions outside of software engineering such
   as product designer, data scientist, associate quantitative trader,
   consulting, etc.
@@ -73,8 +72,8 @@ TODO: Create asset
 <p class="full">
 In order to rank jobs appropriately, salary is used as a subjective metric to
 measure job quality. Due to the subjectiveness of this metric, the following
-results should be taken with a grain of salt. This is because lower paying jobs
-can be enjoyed more depending on the person.
+results should be taken with a grain of salt because higher salary does not
+imply higher job satisfaction.
 </p>
 
 <div class="vbx2"></div>
@@ -88,15 +87,68 @@ can be enjoyed more depending on the person.
   that students that start coding near the start of university are not at a
   disadvantage in terms of co-op job hunting.
 </p>
+<div class="half second">
+  <span class="graph-title"> Age started programming </span>
+</div>
 
 <div class="vbx2"></div>
 <h3> Hackathons </h3>
 <p class="half">
   <span class="big">
-    Students who started coding earlier were paid similarly compared to students who
-    started coding later.
+    Students who attended at least one hackathon earned 18% more on average than those that
+    didn't attend any.
   </span>
-  It doesn't matter if a student started at the age of 13 or 18. This suggests
-  that students that start coding near the start of university are not at a
-  disadvantage in terms of co-op job hunting.
+  In other words, students who show passion for building projects get better job
+  opportunities than those that don't. Alternatively, this result could be
+  because students that attended a hackathon cared more about getting a better
+  job.
+  <br /> <br />
+  Students that attend more than 5 hackathons earned approximately 27% more than
+  those that only attended between 1 to 5 hackathons. This could suggest that the
+  former has a lot more relevant work to show which is more appealing to
+  employers.
 </p>
+<div class="half second">
+  <span class="graph-title"> Number of hackathons attended</span>
+</div>
+
+<div class="vbx2"></div>
+<h3> Side projects </h3>
+<p class="half">
+  <span class="big">
+    Students that build side projects earn 13% more on average than those that
+    don't build side projects.
+  </span>
+  The more time student invests into side projects, the more they are likely
+  to get paid. Side projects are often seen as the closest thing to software
+  work experience, making it a great time investment to compensate for any lack
+  of work experience.
+
+  <br /> <br />
+  It's important to mention that <b>side projects and hackathons are not the only way to find
+  a job</b>. There have been many less conventional ways students have used to
+  find job opportunities such as referrals, activities, cold emails, etc.
+  <br /> <br />
+  It's just as important to note that <b>students who are not involved in software-related
+  extracurriculars still find great jobs</b>. In fact, pursuing interests outside
+  of software is encouraged, and is something many SE students encourage
+  amongst each other.
+</p>
+<div class="half second">
+  <span class="graph-title"> Side project commitment estimate</span>
+</div>
+
+<div class="vbx2"></div>
+<h3> Admission average </h3>
+<p class="half">
+  <span class="big">
+    Admission averages have no significant impact on early job opportunities.
+  </span>
+  A 90 in one school could be harder to achieve than a 99 in another school.
+  In other words, admission averages are an inaccurate metric to determine
+  how successful someone is because high schools do not standardize their grades
+  with each other.
+</p>
+<div class="half second">
+  <span class="graph-title"> Side project commitment estimate</span>
+</div>
