Added a lot of academic copy + graph

--- a/academics/index.html
+++ b/academics/index.html
@@ -1,20 +1,19 @@
 <h1> Academics </h1>
 <h3> Grades </h3>
-<p class="half third">
+<p class="half">
   <span class="big">
-  Study terms do not get progressively harder or easier. TODO: edit
+    Study terms gradually become more difficult, but class averages remain
+    consistent.
   </span>
-  There is a consensus on
-  which terms are the hardest and easiest though. 3B was by far the hardest term,
-  followed by 2B and 3A. Students found 1A to be the easiest, followed by 4A.
+  TODO
 </p>
-<div class="half second two-third">
+<div class="half second">
   Second half. TODO: Line chart. Bar chart for difficulty
 </div>
 
 <div class="vbx2"></div>
 <h3> Attendance </h3>
-<p class="half two-third">
+<p class="half">
 <span class="big">
   Attendance consistently drops term by term, except after the
   hardest term.
@@ -22,12 +21,47 @@
 Either students enjoyed their 4A classes more, or they were possibly looking to
 compensate for their lower grades in 3B.
 </p>
-<div class="half second third">
+<div class="half second">
   Second half. TODO: Gender ratio per year.
 </div>
 
 <div class="vbx4"></div>
 
+
+<h2> Courses </h2>
+<h3> Favourite courses </h3>
+<p class="full">
+<span class="big">
+  Although 3B was the most difficult term, it had the most popular course.
+</span>
+TODO
+</p>
+<div class="vbx2"></div>
+
+<div class="half">
+  <div id="favourite-course"></div>
+  <span class="graph-title">Favourite mandatory courses</span>
+</div>
+<div class="half second">
+  <div id="favourite-elective"></div>
+  <span class="graph-title">Favourite technical electives</span>
+</div>
+<div class="vbx2"></div>
+
+<h3> Least favourite courses </h3>
+<p class="half">
+  <span class="big">
+    3B also had SE 380, the most disliked course, which explains why it was the hardest
+    term.
+  </span>
+  Although SE 463 is just as disliked, it is an easy course, which explains why 4A
+  was an easy term. TODO.
+</p>
+<div class="half">
+  <div id="disliked-course"></div>
+  <span class="graph-title">Least favourite mandatory courses</span>
+</div>
+<div class="vbx2"></div>
 
 <h2> Does X affect grades?</h2>
 
@@ -46,20 +80,16 @@ TODO:
 </div>
 <div class="vbx2"></div>
 
-<h3> Admission average </h3>
-<p class="half third">
-TODO:
+<h3> Parents' education </h3>
+<p class="half">
+  <span class="big">
+    Grades are slightly higher when at least one parent had a university-level degree.
+  </span>
+  This suggests that there's a correlation between parents' education and how
+  academically inclined students are.
 </p>
-<div class="half second two-third">
+<div class="half second">
   Second half. Box plot
 </div>
-<div class="vbx2"></div>
 
-<h3> Parents education </h3>
-<p class="half third">
-TODO:
-</p>
-<div class="half second two-third">
-  Second half. Box plot
-</div>
-<div class="vbx2"></div>
+<div class="vbx4"></div>
