--- a/background/index.html
+++ b/background/index.html
@@ -1,6 +1,6 @@
 <h1> Background </h1>
 <h3> Gender </h3>
-<p class="half two-third">
+<p class="half">
   <span class="big">
     Women make up 17% of the students, which is approximately the same proportion as
     the number of women in tech.
@@ -9,7 +9,7 @@
   satisfied with, the trend is positive: the proportion of female students in
   more-recent SE classes has been increasing.
 </p>
-<div class="half second third">
+<div class="half second">
   Second half. TODO: Gender ratio per year. Percentage component bar chart
 </div>
 
@@ -31,7 +31,7 @@
 <div class="vbx2"></div>
 
 <h3> High school extracurriculars</h3>
-<p class="half two-third">
+<p class="half">
   <span class="big">
   Less than 35% of students were involved in a STEM, CS or Robotics club during
   high school.
@@ -41,7 +41,7 @@
   school newspaper, and more. Pursuing their own unique personal interests was a
   common pattern amongst students during high school.
 </p>
-<div class="half second third">
+<div class="half second">
   High school extracurricular bar chart. Word cloud
 </div>
 
@@ -77,7 +77,7 @@
 <div class="vbx2"></div>
 
 <h3> Level of education </h3>
-<p class="half two-third">
+<p class="half">
   <span class="big">
   There are more parents with Masters and PhD’s combined than Bachelors.
   </span>
@@ -85,7 +85,7 @@
   either be a generational shift, or it could just be that students are tired of
   school after 5 years with no summer.
 </p>
-<div class="half second third">
+<div class="half second">
   Pie chart of level of education? Pie chart
 </div>
 
