--- a/coop/index.html
+++ b/coop/index.html
@@ -64,6 +64,30 @@ TODO: Create asset
   mentality can set up a significant number of current students for
   disappointment compared to other opportunities.
 </p>
+<div class="half second">
+  <div >
+  </div>
+  <span class="graph-title"> Companies students have worked at </span>
+</div>
+
+<div class="vbx2"></div>
+
+<h3> Salary </h3>
+<p class="half">
+  <span class="big">
+    By their last co-op term, students tripled the salary of their first
+    internship.
+  </span>
+  This is largely explained by the salary differences between different locations,
+  extra stipends included in offers. These factors compensate for higher living
+  costs, especially in San Francisco where housing easily costs between
+  $2,000 to $3,000 USD per month.
+</p>
+<div class="half second">
+  <div >
+  </div>
+  <span class="graph-title"> Companies students have worked at </span>
+</div>
 
 <div class="vbx2"></div>
 
