--- a/future/index.html
+++ b/future/index.html
@@ -3,7 +3,7 @@
 <h3> Post-grad plans </h3>
 <p class="half two-third">
   <span class="big">
-    As of January 2018, 77% of students already have an offer, and 15% of students are
+    As of 5 months before graduation, 77% of students already have an offer, and 15% of students are
     still looking for a job.
   </span>
   7 students are planning to do graduate studies after
