--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -10,6 +10,8 @@
 
 <div class="vbx2"></div>
 
+<h2> Original class </h2>
+
 <h2> Did students enjoy SE? </h2>
 <p class="half two-third">
   Use Patrick Lam's data, + 81%
