Add background charts, added pie charts

--- a/background/index.html
+++ b/background/index.html
@@ -25,7 +25,7 @@
   Asia, while the remaining half consist mostly of Caucasians and South Asians.
 </p>
 <div class="half second">
-  Second half. Insert ethnicity breakdown. Horizontal bar chart
+  <div id="ethnicity"></div>
 </div>
 
 <div class="vbx2"></div>
@@ -56,22 +56,21 @@
   TODO
 </p>
 <div class="half second">
-  International students vs non international students. Pie chart
+  <div id="international"></div>
+  <span class="graph-title"></span>
 </div>
 
 <div class="vbx2"></div>
 
 <h2> Family background </h2>
-<h3> Field of study </h3>
+<h3> Income </h3>
 <p class="half">
   <span class="big">
-    Most students' parents don't have a technical degree related to engineering
-    or computer science.
+    TODO
   </span>
   TODO
 </p>
 <div class="half second">
-  Pie chart of level of education? Pie chart
 </div>
 
 <div class="vbx2"></div>
@@ -86,6 +85,6 @@
   school after 5 years with no summer.
 </p>
 <div class="half second">
-  Pie chart of level of education? Pie chart
+  <div id="parent-education"></div>
 </div>
 
