Add line chart, included it in some sections, fixed pie chart, add more content

--- a/background/index.html
+++ b/background/index.html
@@ -10,6 +10,8 @@
   more-recent SE classes has been increasing.
 </p>
 <div class="half second">
+  <div id="gender"></div>
+  <span class="graph-title"></span>
   Second half. TODO: Gender ratio per year. Percentage component bar chart
 </div>
 
