--- a/coop/index.html
+++ b/coop/index.html
@@ -84,7 +84,7 @@ TODO: Create asset
   $2,000 to $3,000 USD per month.
 </p>
 <div class="half second">
-  <div >
+  <div id="salary">
   </div>
   <span class="graph-title"> Companies students have worked at </span>
 </div>
