--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -136,7 +136,8 @@
   programmers
 </p>
 <div class="half second">
-  Second half. Pie chart
+  <div id="desktop"></div>
+  <span class="graph-title"> Primary desktop OS </span>
 </div>
 
 
