--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -1,24 +1,29 @@
 <h1> Program Outcome </h1>
 
 <h2> Original class </h2>
-<p class="half two-third">
+
+<p class="half">
   Use Patrick Lam's data, + 81%
 </p>
-<div class="half second third">
-  Second half. Pie chart
-</div></h2>
+<div class="half second">
+  <div id="original"></div>
+  <span class="graph-title"></span>
+</div>
 
-<div class="vbx2"></div>
-
-<h2> Original class </h2>
-
-<h2> Did students enjoy SE? </h2>
-<p class="half two-third">
-  Use Patrick Lam's data, + 81%
+<h2> Choose again </h2>
+<p class="half">
+  <span class="big">
+    70% of students would choose SE as a program if they could go back to high
+    school.
+  </span>
+  Computer Science is a popular alternative because it is less rigorous and has
+  more course flexibility. Unlike SE, Computer Science does not have a cohort
+  which makes it harder for CS students to meet others.
 </p>
-<div class="half second third">
-  Second half. TODO: Bar chart
-</div></h2>
+<div class="half second">
+  <div id="choose-program"></div>
+  <span class="graph-title"></span>
+</div>
 
 <div class="vb"></div>
 
