Add more content

--- a/academics/index.html
+++ b/academics/index.html
@@ -20,9 +20,13 @@
 </span>
 Either students enjoyed their 4A classes more, or they were possibly looking to
 compensate for their lower grades in 3B.
+<br /><br />
+  Alternatively, students attend slightly more class more during summer terms
+  (2B and 4A).
 </p>
 <div class="half second">
-  Second half. TODO: Gender ratio per year.
+  <div id="attendance"></div>
+  <span class="graph-title">Attendance per term. Max score is 5. </span>
 </div>
 
 <div class="vbx4"></div>
