--- a/background/index.html
+++ b/background/index.html
@@ -11,8 +11,7 @@
 </p>
 <div class="half second">
   <div id="gender"></div>
-  <span class="graph-title"></span>
-  Second half. TODO: Gender ratio per year. Percentage component bar chart
+  <span class="graph-title">Gender proportion in class</span>
 </div>
 
 <div class="vbx2"></div>
@@ -28,6 +27,7 @@
 </p>
 <div class="half second">
   <div id="ethnicity"></div>
+  <span class="graph-title">Students' ethnicities</span>
 </div>
 
 <div class="vbx2"></div>
@@ -59,7 +59,7 @@
 </p>
 <div class="half second">
   <div id="international"></div>
-  <span class="graph-title"></span>
+  <span class="graph-title">Proportion of international students</span>
 </div>
 
 <div class="vbx2"></div>
@@ -80,7 +80,7 @@
 <h3> Level of education </h3>
 <p class="half">
   <span class="big">
-  There are more parents with Masters and PhD’s combined than Bachelors.
+  There are more parents with Masters and Doctorate's combined than Bachelors.
   </span>
   Compared to our parents, only 3 students out of 113 chose to do grad school. This could
   either be a generational shift, or it could just be that students are tired of
@@ -88,5 +88,6 @@
 </p>
 <div class="half second">
   <div id="parent-education"></div>
+  <span class="graph-title">Students' parents' highest education</span>
 </div>
 
