--- a/coop/index.html
+++ b/coop/index.html
@@ -35,8 +35,8 @@ TODO: Create asset
   <span class="big">
     91% of students interned in at least 2 different countries.
   </span>
-  Out of the 9% of students that only interned in Canada, some are restricted to
-  working in Canada due to their Visa.
+  Out of the 9% of students that only interned in Canada, some are restricted
+  due to work visas.
   <br /><br />
   After the 5th co-op, there is a decrease in the number of students working in
   the US. Most people that worked in the US worked in California, specifically
@@ -49,6 +49,8 @@ TODO: Create asset
   Penh, Shanghai, Tokyo, etc.
 </p>
 <div class="half second">
+  <div id="work-location">
+  </div>
   <span class="graph-title"> Areas students have worked in </span>
 </div>
 
@@ -56,8 +58,8 @@ TODO: Create asset
 
 <h3> Favourite Locations </h3>
 <p class="half">
-  <span class="big"> California was not the favourite co-op location for 43% of
-    students.
+  <span class="big">
+    31% of students that worked in California preferred working elsewhere.
   </span>
   Although it is still preferred by the majority of students, this suggests that
   it's not for everyone. This suggests that the infamous 'Cali or Bust'
@@ -65,8 +67,7 @@ TODO: Create asset
   disappointment compared to other opportunities.
 </p>
 <div class="half second">
-  <div >
-  </div>
+  <div id="favourite-location"> </div>
   <span class="graph-title"> Companies students have worked at </span>
 </div>
 
@@ -75,7 +76,7 @@ TODO: Create asset
 <h3> Salary </h3>
 <p class="half">
   <span class="big">
-    By their last co-op term, students tripled the salary of their first
+    By the last co-op term, students tripled the salary of their first
     internship.
   </span>
   This is largely explained by the salary differences between different locations,
@@ -151,7 +152,7 @@ imply higher job satisfaction.
   <br /> <br />
   It's important to mention that <b>side projects and hackathons are not the only way to find
   a job</b>. There have been many less conventional ways students have used to
-  find job opportunities such as referrals, activities, cold emails, etc.
+  find job opportunities such as referrals, networking, etc.
   <br /> <br />
   It's just as important to note that <b>students who are not involved in software-related
   extracurriculars still find great jobs</b>. In fact, pursuing interests outside
