--- a/introduction/index.html
+++ b/introduction/index.html
@@ -18,9 +18,9 @@
 
 <p class="full">
 The findings in this report were derived from the results of a class survey.
-In total, 113 out of 141 (80%) students responded. In many ways (especially
+In total, 113 out of 141 (80%) graduating students responded. In many ways (especially
 class size), the class of 2018 is an outlier, and generalizations from this
-class to other SE classes are risky.
+class to other SE classes is not recommended.
   <br /><br />
 
 Study terms are defined as 1A, 1B, 2A, up to 4B (8 terms). Coop terms are evenly
